--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 			<div class="row">
 				<div class="col-md-12">
-					<img src="assets/images/logo.png">
+					<img src="assets/images/logo.png" id="logo">
 				</div>
 			</div>
 
@@ -32,6 +32,12 @@
 
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3" id="main"></div>
+			</div>
+
+			<div class="row">
+				<div class="col-md-6 col-md-offset-3" id="button">
+						<button id="restart">Again?</button>
+				</div>
 			</div>
 
 			<div class="row">
