commented and readme added

--- a/index.html
+++ b/index.html
@@ -19,29 +19,39 @@
 		<div class="container">
 
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-xs-12">
 					<img src="assets/images/logo.png" id="logo">
 				</div>
 			</div>
 
 			<div class="row">
-				<div class="col-md-6 col-md-offset-3" id="timer"></div>
+				<div class="col-xs-6 col-xs-offset-3" id="timer"></div>
+			</div>
+
+			<div class="row">
+				<h3 id="instructions">
+					Welcome to League of Legends Trivia!
+					<br>
+					You will be shown an item and will have 5 seconds to choose the correct name.
+					<br>
+					Good Luck!
+				</h3>
 			</div>
 
 			<br>
 
 			<div class="row">
-				<div class="col-md-6 col-md-offset-3" id="main"></div>
+				<div class="col-xs-6 col-xs-offset-3" id="main"></div>
 			</div>
 
 			<div class="row">
-				<div class="col-md-6 col-md-offset-3" id="button">
+				<div class="col-xs-6 col-xs-offset-3" id="button">
 						<button id="restart">Again?</button>
 				</div>
 			</div>
 
 			<div class="row">
-				<div class="col-md-6 col-md-offset-3" id="button">
+				<div class="col-xs-12" id="button">
 						<button id="start">Start</button>
 				</div>
 			</div>
